Closed Bug 95531 Opened 23 years ago Closed 23 years ago

Ref count error in S/MIME decryption

Categories

(NSS :: Libraries, defect, P1)

x86
Windows NT

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: thayes0993, Assigned: bugz)

Details

Attachments

(1 file)

The recipientInfo handling of the new SMIME library does not increment the ref
count on the recipients certificate during the bulk key unwrapping phase.  This
results in a "extra" release of the certificate during the message decryption
and eventually a failure in the application.
Ian, could you please review Terry's patch?
Assignee: wtc → mcgreer
Priority: -- → P1
Target Milestone: --- → 3.4
indeed.  r=mcgreer
Checked in (3.3 branch and tip)
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: