Bug 95531 - correct ref count on certificate in CMS (SMIME) recipient handling.